Recysell/src/main/java/com/example/Recysell/error/UnauthorizedDonacionException.java
package com.example.Recysell.error;

public class UnauthorizedDonacionException extends RuntimeException {
    public UnauthorizedDonacionException(String message) {
        super(message);
    }
}
